# nucc-cpp-library

./: .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  test.xfbin
binary/: binary.h
cmake/: nuccConfig.cmake.in  xfbinConfig.cmake.in
include/: xfbin.h
include/nucc/: chunk.hpp  chunk_binary.hpp  chunk_meta.hpp  chunk_new.hpp  chunk_null.hpp  chunk_page.hpp  chunk_texture.hpp  chunk_type.hpp  chunk_types.hpp  chunks_new.hpp  crc32.hpp  crypt.hpp  error_handler.hpp  error_handling.hpp  game.hpp  hash.hpp  page.hpp  page_new.hpp  rgb.hpp  utils.hpp  xfbin.cpp  xfbin.hpp  xfbin_new.hpp
include/nucc/chunks/: binary.hpp  binary_new.hpp  chunk_binary.hpp  chunk_meta.hpp  chunk_null.hpp  chunk_page.hpp  chunk_texture.hpp  chunks.cpp  chunks.hpp  texture.hpp
include/nucc/chunks/binary/: asb.hpp  asbr.hpp  binary_data.hpp  binary_data_new.hpp  binary_serializable.hpp  bytes_serializable.hpp  eoh.hpp  eohps3.hpp  json_serializable.hpp
include/nucc/chunks/binary/asb/: messageInfo.hpp
include/nucc/chunks/binary/asbr/: MainModeParam.hpp  PlayerColorParam.hpp  SpeakingLineParam.hpp  messageInfo.hpp  player_color_param.hpp  utils.cpp  utils.hpp
include/nucc/chunks/binary/eoh/: messageInfo.hpp  utils.cpp  utils.hpp
include/nucc/chunks/binary/eohps3/: messageInfo.hpp  utils.cpp  utils.hpp
include/nucc/chunks/binary/eohps4/: messageInfo.hpp  utils.cpp  utils.hpp
include/nucc/meta/binary/: binary_data.hpp  eohps4.hpp
include/nucc/meta/binary/asbr/: messageInfo.hpp  utils.cpp
include/nucc/meta/texture/: nut.hpp
include/nucc/utils/: crc32.hpp  rgb.hpp  utils.hpp
include/xfbin/: chunk.hpp  chunk_binary.hpp  chunk_model.hpp  chunk_texture.hpp  chunk_type.hpp  error.hpp  page.hpp  xfbin.hpp
include/xfbin/chunks/: binary.hpp  chunks.hpp  texture.hpp
include/xfbin/detail/: cryptor.hpp  error.hpp  index.hpp  xfbin_reader.hpp
src/: PlayerColorParam.cpp  chunk.cpp  chunk_binary.cpp  chunk_model.cpp  chunk_page.cpp  chunk_texture.cpp  chunk_type.cpp  chunk_types.cpp  chunks.cpp  crc32.cpp  cryptor.cpp  error.cpp  game.cpp  page.cpp  player_color_param.cpp  rgb.cpp  xfbin.cpp  xfbin_reader.cpp
test/: main.cpp
xfbin/: xfbin.h  xfbin.hpp
